FIX : store notice z-index

--- a/inc/modules/woo/assets/css/woo-module.css
+++ b/inc/modules/woo/assets/css/woo-module.css
@@ -654,6 +654,7 @@ label.inline input[type="checkbox"]:checked + span::after {
   padding: 30px 80px;
   display: flex;
   justify-content: space-between;
+  z-index: 99;
 }
 
 .admin-bar .woocommerce-store-notice {
