--- a/inc/modules/woo/assets/scss/components/_store-notice.scss
+++ b/inc/modules/woo/assets/scss/components/_store-notice.scss
@@ -10,6 +10,7 @@
 	padding: 30px 80px;
 	display: flex;
 	justify-content: space-between;
+	z-index: 99;
 	
 	.admin-bar &{
 		top: 30px;
